# chips

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp
